apps/dmz/affine/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: affine
  namespace: dmz
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`notes.mysweetpea.cc`)
      kind: Rule
      services:
        - name: affine
          port: 3010
